--- a/docs/android/build-pre-call-ui/build-your-own/add-audio-video-preview.mdx
+++ b/docs/android/build-pre-call-ui/build-your-own/add-audio-video-preview.mdx
@@ -25,25 +25,25 @@ We'll be using `ProductDBParticipantTileView`, `ProductDBInputField` for buildin
   ....
   >
 
-  <productdb.io.uikit.view.participanttile.ProductDBParticipantTileView
+  <dyte.io.uikit.view.participanttile.ProductDBParticipantTileView
     android:id="@+id/dyteparticipanttileview_setup_screen"
     android:layout_width="0dp"
     android:layout_height="0dp"
   />
 
-  <productdb.io.uikit.view.controlbarbuttons.ProductDBMicToggleButton
+  <dyte.io.uikit.view.controlbarbuttons.ProductDBMicToggleButton
     android:id="@+id/dytemictoggle_setup_screen"
     android:layout_width="48dp"
     android:layout_height="48dp"
   />
 
-  <productdb.io.uikit.view.controlbarbuttons.ProductDBCameraToggleButton
+  <dyte.io.uikit.view.controlbarbuttons.ProductDBCameraToggleButton
     android:id="@+id/dytecameratoggle_setup_screen"
     android:layout_width="48dp"
     android:layout_height="48dp"
   />
 
-  <productdb.io.uikit.view.ProductDBLabel
+  <dyte.io.uikit.view.ProductDBLabel
     android:id="@+id/dyteLabelView"
     android:layout_width="300dp"
     android:layout_height="25dp"
@@ -52,14 +52,14 @@ We'll be using `ProductDBParticipantTileView`, `ProductDBInputField` for buildin
     android:textSize="16sp"
   />
 
-  <productdb.io.uikit.view.ProductDBInputField
+  <dyte.io.uikit.view.ProductDBInputField
     android:id="@+id/textInputEditText"
     android:layout_width="300dp"
     android:layout_height="48dp"
     android:hint="Your name"
   />
 
-  <productdb.io.uikit.view.ProductDBJoinButton
+  <dyte.io.uikit.view.ProductDBJoinButton
     android:id="@+id/dytejoinbutton_setup_screen"
     android:layout_width="300dp"
     android:layout_height="wrap_content"
