--- a/docs/android/build-pre-call-ui/build-your-own/edit-user-name.mdx
+++ b/docs/android/build-pre-call-ui/build-your-own/edit-user-name.mdx
@@ -23,7 +23,7 @@ We add a `<ProductDBInputField>` element for entering the participant name. We s
   ....
   >
 
-  <productdb.io.uikit.view.ProductDBLabel
+  <dyte.io.uikit.view.ProductDBLabel
     android:id="@+id/dyteLabelView"
     android:layout_width="300dp"
     android:layout_height="25dp"
@@ -32,7 +32,7 @@ We add a `<ProductDBInputField>` element for entering the participant name. We s
     android:textSize="16sp"
   />
 
-  <productdb.io.uikit.view.ProductDBInputField
+  <dyte.io.uikit.view.ProductDBInputField
     android:contentDescription="Textbox for display name"
     android:id="@+id/textInputEditText"
     android:layout_width="300dp"
@@ -40,7 +40,7 @@ We add a `<ProductDBInputField>` element for entering the participant name. We s
     android:hint="Your name"
   />
 
-  <productdb.io.uikit.view.ProductDBJoinButton
+  <dyte.io.uikit.view.ProductDBJoinButton
     android:contentDescription="Button for joining meeting"
     android:id="@+id/dytejoinbutton_setup_screen"
     android:layout_width="300dp"
