--- a/docs/android/build-pre-call-ui/build-your-own/initial-code-skeleton.mdx
+++ b/docs/android/build-pre-call-ui/build-your-own/initial-code-skeleton.mdx
@@ -27,7 +27,7 @@ Barebone xml needed to redner ui for self name and a button to join the meeting 
   ....
   >
 
-  <productdb.io.uikit.view.ProductDBLabel
+  <dyte.io.uikit.view.ProductDBLabel
     android:id="@+id/dyteLabelView"
     android:layout_width="300dp"
     android:layout_height="25dp"
@@ -36,7 +36,7 @@ Barebone xml needed to redner ui for self name and a button to join the meeting 
     android:textSize="16sp"
   />
 
-  <productdb.io.uikit.view.ProductDBJoinButton
+  <dyte.io.uikit.view.ProductDBJoinButton
     android:contentDescription="Button for joining meeting"
     android:id="@+id/dytejoinbutton_setup_screen"
     android:layout_width="300dp"
