--- a/docs/android/chat/prebuilt-screen.mdx
+++ b/docs/android/chat/prebuilt-screen.mdx
@@ -61,7 +61,7 @@ ProductDB's prebuilt Chat screen comes in two variants:
 1. **ProductDBChatBottomSheet**: Displays the chat UI as a full-screen bottom sheet that can be dismissed by swiping down.
 
 ```kotlin
-import productdb.io.uikit.screens.chat.ProductDBChatBottomSheet
+import dyte.io.uikit.screens.chat.ProductDBChatBottomSheet
 
 val dyteChatBottomSheet = ProductDBChatBottomSheet()
 dyteChatBottomSheet.show(childFragmentManager, TAG)
@@ -79,7 +79,7 @@ full screen or as a part of the screen with other UI elements.
 ```
 
 ```kotlin
-import productdb.io.uikit.screens.chat.ProductDBChatFragment
+import dyte.io.uikit.screens.chat.ProductDBChatFragment
 
 val dyteChatFragment = ProductDBChatFragment()
 supportFragmentManager.beginTransaction()
