--- a/docs/android/components/productdb-audio-selector.mdx
+++ b/docs/android/components/productdb-audio-selector.mdx
@@ -5,7 +5,7 @@ An audio device selector component which can be used to select audio devices.
 To use this component inside an xml use following syntax:
 
 ```xml
-<productdb.io.uikit.view.ProductDBAudioDeviceSelector
+<dyte.io.uikit.view.ProductDBAudioDeviceSelector
     android:id="@+id/audioSelector"
     app:dyte_ds_label="custom label"
     android:layout_width="0dp"
