--- a/docs/android/components/productdb-button.mdx
+++ b/docs/android/components/productdb-button.mdx
@@ -10,7 +10,7 @@ description: >-
 A button that follows ProductDB's Design System.
 
 ```xml
-<productdb.io.uikit.view.button.ProductDBButton
+<dyte.io.uikit.view.button.ProductDBButton
         android:gravity="center"
         android:id="@+id/btn_id"
         android:layout_width="200dp"
