--- a/docs/android/components/productdb-camera-toggle.mdx
+++ b/docs/android/components/productdb-camera-toggle.mdx
@@ -9,7 +9,7 @@ description: >-
 A button which toggles your camera.
 
 ```xml
-<productdb.io.uikit.view.controlbarbuttons.ProductDBCameraToggleButton
+<dyte.io.uikit.view.controlbarbuttons.ProductDBCameraToggleButton
           android:id="@+id/btn_camera_toggle"
           android:layout_width="48dp"
           android:layout_height="48dp"
