--- a/docs/android/components/productdb-controlbar-button.mdx
+++ b/docs/android/components/productdb-controlbar-button.mdx
@@ -10,7 +10,7 @@ description: >-
 A skeleton component used for composing buttons.
 
 ```xml
-<productdb.io.uikit.view.controlbars.ProductDBMeetingControlBarView
+<dyte.io.uikit.view.controlbars.ProductDBMeetingControlBarView
       android:id="@+id/dyte_control_bar_button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
