--- a/docs/android/components/productdb-grid-pagination.mdx
+++ b/docs/android/components/productdb-grid-pagination.mdx
@@ -11,7 +11,7 @@ A component which allows you to change current page and view mode of active
 participants list.
 
 ```xml
-<productdb.io.uikit.view.ProductDBGridPaginatorView
+<dyte.io.uikit.view.ProductDBGridPaginatorView
       android:id="@+id/dyte_grid_paginator"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />
