--- a/docs/android/components/productdb-grid.mdx
+++ b/docs/android/components/productdb-grid.mdx
@@ -11,7 +11,7 @@ The main grid component which abstracts all the grid handling logic and renders
 it for you.
 
 ```xml
-<productdb.io.uikit.molecules.dytegrid.ProductDBGridViewV2
+<dyte.io.uikit.molecules.dytegrid.ProductDBGridViewV2
         android:id="@+id/dyte_grid_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
