--- a/docs/android/components/productdb-idle-screen.mdx
+++ b/docs/android/components/productdb-idle-screen.mdx
@@ -10,7 +10,7 @@ description: >-
 A screen that shows full screen loader which is used between a connection is established with ProductDB universe.
 
 ```xml
-<productdb.io.uikit.view.ProductDBLoaderView
+<dyte.io.uikit.view.ProductDBLoaderView
       android:id="@+id/clLoader"
       android:layout_width="0dp"
       android:layout_height="0dp"
