--- a/docs/android/components/productdb-leave-button.mdx
+++ b/docs/android/components/productdb-leave-button.mdx
@@ -9,7 +9,7 @@ description: >-
 A button which toggles visilibility of the leave confirmation dialog.
 
 ```xml
-<productdb.io.uikit.view.controlbarbuttons.ProductDBLeaveButton
+<dyte.io.uikit.view.controlbarbuttons.ProductDBLeaveButton
       android:id="@+id/dyte_leave_button"
       android:layout_width="48dp"
       android:layout_height="48dp"
