--- a/docs/android/components/productdb-meeting-title.mdx
+++ b/docs/android/components/productdb-meeting-title.mdx
@@ -10,7 +10,7 @@ description: >-
 A component which displays the title of the meeting.
 
 ```xml
-<productdb.io.uikit.view.ProductDBMeetingTitleView
+<dyte.io.uikit.view.ProductDBMeetingTitleView
       android:id="@+id/dytemeetingtitletextview"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />
