--- a/docs/android/components/productdb-mic-toggle.mdx
+++ b/docs/android/components/productdb-mic-toggle.mdx
@@ -9,7 +9,7 @@ description: >-
 A button which toggles your microphone.
 
 ```xml
-<productdb.io.uikit.view.controlbarbuttons.ProductDBMicToggleButton
+<dyte.io.uikit.view.controlbarbuttons.ProductDBMicToggleButton
           android:id="@+id/dyte_mic_toggle"
           android:layout_width="48dp"
           android:layout_height="48dp"
