--- a/docs/android/components/productdb-more-toggle.mdx
+++ b/docs/android/components/productdb-more-toggle.mdx
@@ -9,7 +9,7 @@ description: >-
 A button which toggles visibility of a more menu.
 
 ```xml
-<productdb.io.uikit.view.controlbarbuttons.ProductDBMoreToggleButton
+<dyte.io.uikit.view.controlbarbuttons.ProductDBMoreToggleButton
       android:id="@+id/dyte_more_toggle"
       android:layout_width="50dp"
       android:layout_height="50dp" />
