--- a/docs/android/components/productdb-name-tag.mdx
+++ b/docs/android/components/productdb-name-tag.mdx
@@ -10,7 +10,7 @@ description: >-
 A component which shows a participant's name.
 
 ```xml
-<productdb.io.uikit.view.nametagview.ProductDBNameTagView
+<dyte.io.uikit.view.nametagview.ProductDBNameTagView
       android:id="@+id/dyte_name_tag_view"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />
