--- a/docs/android/components/productdb-participant-count.mdx
+++ b/docs/android/components/productdb-participant-count.mdx
@@ -10,7 +10,7 @@ description: >-
 A component which shows count of total joined participants in a meeting.
 
 ```xml
-<productdb.io.uikit.view.ProductDBParticipantCountView
+<dyte.io.uikit.view.ProductDBParticipantCountView
       android:id="@+id/dyte_participant_count_view"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />
