--- a/docs/android/components/productdb-recording-indicator.mdx
+++ b/docs/android/components/productdb-recording-indicator.mdx
@@ -12,7 +12,7 @@ A component which indicates the recording status of a meeting.
 It will not render anything if no recording is taking place.
 
 ```xml
-<productdb.io.uikit.view.ProductDBRecordingIndicator
+<dyte.io.uikit.view.ProductDBRecordingIndicator
       android:id="@+id/dyte_recording_indicator"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />
