--- a/docs/android/components/productdb-video-selector.mdx
+++ b/docs/android/components/productdb-video-selector.mdx
@@ -5,7 +5,7 @@ A video device selector component which can be used to select video devices.
 To use this component inside an xml use following syntax:
 
 ```xml
-<productdb.io.uikit.view.ProductDBVideoDeviceSelector
+<dyte.io.uikit.view.ProductDBVideoDeviceSelector
     android:id="@+id/videoSelector"
     app:dyte_ds_label="custom label"
     android:layout_width="0dp"
