--- a/docs/android/components/productdb-webinar-stage-toggle.mdx
+++ b/docs/android/components/productdb-webinar-stage-toggle.mdx
@@ -9,7 +9,7 @@ description: >-
 Component that lets you add provisin for localUser to Join stage. This component internally handles operations related to Request Access, Join Stage, Cancel Request Access and Leave the stage.
 
 ```xml
-<productdb.io.uikit.view.controlbarbuttons.webinarstagetogglebutton.ProductDBWebinarStageToggleButton
+<dyte.io.uikit.view.controlbarbuttons.webinarstagetogglebutton.ProductDBWebinarStageToggleButton
       android:id="@+id/dyte_webinar_stage_toggle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />
