--- a/docs/android/polls/prebuilt-create-poll.mdx
+++ b/docs/android/polls/prebuilt-create-poll.mdx
@@ -20,7 +20,7 @@ To integrate the `ProductDBCreatePollBottomSheet` into your app and allow partic
 use the provided code snippet:
 
 ```kotlin
-import productdb.io.uikit.screens.polls.ProductDBCreatePollBottomSheet
+import dyte.io.uikit.screens.polls.ProductDBCreatePollBottomSheet
 
 val createPollBottomSheet = ProductDBCreatePollBottomSheet()
 createPollBottomSheet.show(childFragmentManager, TAG)
