--- a/docs/android/polls/prebuilt-polls-screen.mdx
+++ b/docs/android/polls/prebuilt-polls-screen.mdx
@@ -25,7 +25,7 @@ The prebuilt Polls screen is available in two variants:
 1. [**ProductDBPollsBottomSheet**](/android/components/productdb-polls): Displays the Polls list as a full-screen bottom sheet that can be dismissed by swiping down.
 
 ```kotlin
-import productdb.io.uikit.screens.polls.ProductDBPollsBottomSheet
+import dyte.io.uikit.screens.polls.ProductDBPollsBottomSheet
 
 val dytePollsBottomSheet = ProductDBPollsBottomSheet()
 dytePollsBottomSheet.show(childFragmentManager, TAG)
@@ -43,7 +43,7 @@ to show the Polls UI fullscreen or in a part of the screen along with other UI e
 ```
 
 ```kotlin
-import productdb.io.uikit.screens.polls.ProductDBPollsFragment
+import dyte.io.uikit.screens.polls.ProductDBPollsFragment
 
 val dytePollsFragment = ProductDBPollsFragment()
 supportFragmentManager.beginTransaction()
