--- a/docs/android/render-participant-videos/using-productdbgrid.mdx
+++ b/docs/android/render-participant-videos/using-productdbgrid.mdx
@@ -12,7 +12,7 @@ To render participant videos using `ProductDBGridView`, follow these steps:
 1. **Add ProductDBGridView to your layout**:
 
 ```xml
-<productdb.io.uikit.view.dytegrid.ProductDBGridViewV2
+<dyte.io.uikit.view.dytegrid.ProductDBGridViewV2
         android:id="@+id/dyte_grid_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,7 +23,7 @@ To render participant videos using `ProductDBGridView`, follow these steps:
 `activate` method with an instance of `ProductDBMobileClient`.
 
 ```kotlin
-import productdb.io.uikit.view.dytegrid.ProductDBGridViewV2
+import dyte.io.uikit.view.dytegrid.ProductDBGridViewV2
 import io.productdb.core.ProductDBMobileClient
 
 class MeetingFragment : Fragment() {
