--- a/docs/react-ui-kit/components/productdb-audio-visualizer.mdx
+++ b/docs/react-ui-kit/components/productdb-audio-visualizer.mdx
@@ -12,7 +12,7 @@ An audio visualizer component which visualizes a participants audio.
 Commonly used inside `productdb-name-tag`.
 
 ```jsx live
-<ProductDBAudioVisualizer participant={participant} />
+<DyteAudioVisualizer participant={participant} />
 ```
 
 ## Props
