--- a/docs/react-ui-kit/components/productdb-button.mdx
+++ b/docs/react-ui-kit/components/productdb-button.mdx
@@ -11,8 +11,8 @@ A button that follows ProductDB's Design System.
 
 ```jsx live
 <Row>
-  <ProductDBButton>Primary</ProductDBButton>
-  <ProductDBButton variant="secondary">Secondary</ProductDBButton>
+  <DyteButton>Primary</DyteButton>
+  <DyteButton variant="secondary">Secondary</DyteButton>
 </Row>
 ```
 
