--- a/docs/react-ui-kit/components/productdb-camera-toggle.mdx
+++ b/docs/react-ui-kit/components/productdb-camera-toggle.mdx
@@ -10,9 +10,9 @@ A button which toggles your camera.
 
 ```jsx live
 <Center>
-  <ProductDBCameraToggle size="sm" meeting={meeting} />
-  <ProductDBCameraToggle size="lg" meeting={meeting} />
-  <ProductDBCameraToggle variant="horizontal" size="sm" meeting={meeting} />
+  <DyteCameraToggle size="sm" meeting={meeting} />
+  <DyteCameraToggle size="lg" meeting={meeting} />
+  <DyteCameraToggle variant="horizontal" size="sm" meeting={meeting} />
 </Center>
 ```
 
