--- a/docs/react-ui-kit/components/productdb-chat.mdx
+++ b/docs/react-ui-kit/components/productdb-chat.mdx
@@ -11,7 +11,7 @@ Fully featured chat component with image & file upload, emoji picker and auto-sc
 
 ```jsx live
 <Center>
-  <ProductDBChat
+  <DyteChat
     meeting={meeting}
     style={{ height: '480px', maxWidth: '320px', backgroundColor: '#000' }}
   />
