--- a/docs/react-ui-kit/components/productdb-clock.mdx
+++ b/docs/react-ui-kit/components/productdb-clock.mdx
@@ -8,7 +8,7 @@ description: >-
 # ProductDBClock
 
 ```jsx live
-<ProductDBClock meeting={meeting} />
+<DyteClock meeting={meeting} />
 ```
 
 ## Props
