--- a/docs/react-ui-kit/components/productdb-emoji-picker.mdx
+++ b/docs/react-ui-kit/components/productdb-emoji-picker.mdx
@@ -10,8 +10,8 @@ description: >-
 A very simple emoji picker component.
 
 ```jsx live
-<ProductDBEmojiPicker
-  onProductDBEmojiClicked={(e) => console.log('You selected', e.detail)}
+<DyteEmojiPicker
+  onDyteEmojiClicked={(e) => console.log('You selected', e.detail)}
 />
 ```
 
