--- a/docs/react-ui-kit/components/productdb-ended-screen.mdx
+++ b/docs/react-ui-kit/components/productdb-ended-screen.mdx
@@ -10,7 +10,7 @@ description: >-
 A screen which shows a meeting has ended.
 
 ```jsx live
-<ProductDBEndedScreen
+<DyteEndedScreen
   config={{ designTokens: { logo: '/logo/dark.svg' } }}
   style={{ height: '360px' }}
 />
