--- a/docs/react-ui-kit/components/productdb-grid-pagination.mdx
+++ b/docs/react-ui-kit/components/productdb-grid-pagination.mdx
@@ -12,7 +12,7 @@ of active participants list. This is reflected in the `productdb-grid` component
 
 ```jsx live
 <Center>
-  <ProductDBGridPagination meeting={meeting} />
+  <DyteGridPagination meeting={meeting} />
 </Center>
 ```
 
