--- a/docs/react-ui-kit/components/productdb-grid.mdx
+++ b/docs/react-ui-kit/components/productdb-grid.mdx
@@ -10,7 +10,7 @@ description: >-
 The main grid component which abstracts all the grid handling logic and renders it for you.
 
 ```jsx live
-<ProductDBGrid meeting={meeting} style={{ height: '360px' }} />
+<DyteGrid meeting={meeting} style={{ height: '360px' }} />
 ```
 
 ## Props
