--- a/docs/react-ui-kit/components/productdb-icon.mdx
+++ b/docs/react-ui-kit/components/productdb-icon.mdx
@@ -9,7 +9,7 @@ description: >-
 An icon component which accepts an svg string and renders it.
 
 ```jsx live
-<ProductDBIcon icon={airplaneSVG} />
+<DyteIcon icon={airplaneSVG} />
 ```
 
 ## Props
