--- a/docs/react-ui-kit/components/productdb-leave-meeting.mdx
+++ b/docs/react-ui-kit/components/productdb-leave-meeting.mdx
@@ -12,7 +12,7 @@ end meeting for all, if you have the permission.
 
 ```jsx live
 <div style={{ width: '360px' }}>
-  <ProductDBLeaveMeeting meeting={meeting} />
+  <DyteLeaveMeeting meeting={meeting} />
 </div>
 ```
 
