--- a/docs/react-ui-kit/components/productdb-meeting-title.mdx
+++ b/docs/react-ui-kit/components/productdb-meeting-title.mdx
@@ -10,7 +10,7 @@ description: >-
 A component which displays the title of the meeting.
 
 ```jsx live
-<ProductDBMeetingTitle meeting={meeting} />
+<DyteMeetingTitle meeting={meeting} />
 ```
 
 ## Props
