--- a/docs/react-ui-kit/components/productdb-meeting.mdx
+++ b/docs/react-ui-kit/components/productdb-meeting.mdx
@@ -14,7 +14,7 @@ With this component, you don't have to handle all the states,
 dialogs and other smaller bits of managing the application.
 
 ```jsx live
-<ProductDBMeeting mode="fill" meeting={meeting} style={{ height: '480px' }} />
+<DyteMeeting mode="fill" meeting={meeting} style={{ height: '480px' }} />
 ```
 
 ## Props
