--- a/docs/react-ui-kit/components/productdb-mixed-grid.mdx
+++ b/docs/react-ui-kit/components/productdb-mixed-grid.mdx
@@ -15,7 +15,7 @@ function CustomGrid() {
   const { meeting } = useDyteMeeting();
 
   return (
-    <ProductDBMixedGrid
+    <DyteMixedGrid
       participants={active}
       pinnedParticipants={[]}
       screenShareParticipants={[meeting.self]}
