--- a/docs/react-ui-kit/components/productdb-more-toggle.mdx
+++ b/docs/react-ui-kit/components/productdb-more-toggle.mdx
@@ -18,9 +18,9 @@ When clicked it emits a `dyteStateUpdate` event with the data:
 
 ```jsx live
 <Center>
-  <ProductDBMoreToggle size="sm" />
-  <ProductDBMoreToggle size="lg" />
-  <ProductDBMoreToggle variant="horizontal" size="sm" />
+  <DyteMoreToggle size="sm" />
+  <DyteMoreToggle size="lg" />
+  <DyteMoreToggle variant="horizontal" size="sm" />
 </Center>
 ```
 
