--- a/docs/react-ui-kit/components/productdb-notifications.mdx
+++ b/docs/react-ui-kit/components/productdb-notifications.mdx
@@ -12,7 +12,7 @@ You can configure which notifications you want to see and which ones you want to
 There are also certain limits which you can set as well.
 
 ```jsx live
-<ProductDBNotifications
+<DyteNotifications
   meeting={meeting}
   config={{
     config: {
@@ -53,7 +53,7 @@ const config = {
   },
 };
 
-<ProductDBNotifications meeting={meeting} config={config} />;
+<DyteNotifications meeting={meeting} config={config} />;
 ```
 
 ## Notification duration
@@ -86,7 +86,7 @@ const config = {
   },
 };
 
-<ProductDBNotifications meeting={meeting} config={config} />;
+<DyteNotifications meeting={meeting} config={config} />;
 ```
 
 ## Notification Sound
@@ -106,7 +106,7 @@ const config = {
   },
 };
 
-<ProductDBNotifications meeting={meeting} config={config} />;
+<DyteNotifications meeting={meeting} config={config} />;
 ```
 
 ## Controlling sound once participants count
