--- a/docs/react-ui-kit/components/productdb-participant-count.mdx
+++ b/docs/react-ui-kit/components/productdb-participant-count.mdx
@@ -10,7 +10,7 @@ description: >-
 A component which shows count of total joined participants in a meeting.
 
 ```jsx live
-<ProductDBParticipantCount meeting={meeting} />
+<DyteParticipantCount meeting={meeting} />
 ```
 
 ## Props
