--- a/docs/react-ui-kit/components/productdb-participant.mdx
+++ b/docs/react-ui-kit/components/productdb-participant.mdx
@@ -12,7 +12,7 @@ name, picture and media device status.
 You can perform privileged actions on the participant too.
 
 ```jsx live
-<ProductDBParticipant participant={meeting.self} />
+<DyteParticipant participant={meeting.self} />
 ```
 
 ## Props
