--- a/docs/react-ui-kit/components/productdb-participants-audio.mdx
+++ b/docs/react-ui-kit/components/productdb-participants-audio.mdx
@@ -10,7 +10,7 @@ description: >-
 A component which plays all the audio from participants and screenshares.
 
 ```jsx live
-<ProductDBParticipantsAudio meeting={meeting} />
+<DyteParticipantsAudio meeting={meeting} />
 ```
 
 ## Props
