--- a/docs/react-ui-kit/components/productdb-participants.mdx
+++ b/docs/react-ui-kit/components/productdb-participants.mdx
@@ -12,7 +12,7 @@ run privileged actions on each participant according to your permissions.
 
 ```jsx live
 <Center>
-  <ProductDBParticipants
+  <DyteParticipants
     meeting={meeting}
     style={{ height: '480px', maxWidth: '320px', backgroundColor: '#000' }}
   />
