--- a/docs/react-ui-kit/components/productdb-plugin-main.mdx
+++ b/docs/react-ui-kit/components/productdb-plugin-main.mdx
@@ -10,7 +10,7 @@ description: >-
 A component which loads a plugin.
 
 ```jsx live
-<ProductDBPluginMain meeting={meeting} plugin={activePlugin} />
+<DytePluginMain meeting={meeting} plugin={activePlugin} />
 ```
 
 ## Props
