--- a/docs/react-ui-kit/components/productdb-plugins-toggle.mdx
+++ b/docs/react-ui-kit/components/productdb-plugins-toggle.mdx
@@ -19,9 +19,9 @@ When clicked it emits a `dyteStateUpdate` event with the data:
 
 ```jsx live
 <Center>
-  <ProductDBPluginsToggle size="sm" meeting={meeting} />
-  <ProductDBPluginsToggle size="lg" meeting={meeting} />
-  <ProductDBPluginsToggle variant="horizontal" size="sm" meeting={meeting} />
+  <DytePluginsToggle size="sm" meeting={meeting} />
+  <DytePluginsToggle size="lg" meeting={meeting} />
+  <DytePluginsToggle variant="horizontal" size="sm" meeting={meeting} />
 </Center>
 ```
 
