--- a/docs/react-ui-kit/components/productdb-plugins.mdx
+++ b/docs/react-ui-kit/components/productdb-plugins.mdx
@@ -12,7 +12,7 @@ and ability to enable or disable plugins.
 
 ```jsx live
 <Center>
-  <ProductDBPlugins
+  <DytePlugins
     meeting={meeting}
     style={{ height: '480px', maxWidth: '320px', backgroundColor: '#000' }}
   />
