--- a/docs/react-ui-kit/components/productdb-poll-form.mdx
+++ b/docs/react-ui-kit/components/productdb-poll-form.mdx
@@ -9,7 +9,7 @@ description: >-
 A component that lets you create a poll.
 
 ```jsx live
-<ProductDBPollForm onProductDBCreatePoll={(e) => console.log('create poll', e.detail)} />
+<DytePollForm onDyteCreatePoll={(e) => console.log('create poll', e.detail)} />
 ```
 
 ## Props
