--- a/docs/react-ui-kit/components/productdb-polls-toggle.mdx
+++ b/docs/react-ui-kit/components/productdb-polls-toggle.mdx
@@ -21,9 +21,9 @@ When clicked it emits a `dyteStateUpdate` event with the data:
 
 ```jsx live
 <Center>
-  <ProductDBPollsToggle size="sm" meeting={meeting} />
-  <ProductDBPollsToggle size="lg" meeting={meeting} />
-  <ProductDBPollsToggle variant="horizontal" size="sm" meeting={meeting} />
+  <DytePollsToggle size="sm" meeting={meeting} />
+  <DytePollsToggle size="lg" meeting={meeting} />
+  <DytePollsToggle variant="horizontal" size="sm" meeting={meeting} />
 </Center>
 ```
 
