--- a/docs/react-ui-kit/components/productdb-polls.mdx
+++ b/docs/react-ui-kit/components/productdb-polls.mdx
@@ -12,7 +12,7 @@ the ability to enable or disable them as per their permissions.
 
 ```jsx live
 <Center>
-  <ProductDBPolls
+  <DytePolls
     meeting={meeting}
     style={{ height: '480px', maxWidth: '320px', backgroundColor: '#000' }}
   />
