--- a/docs/react-ui-kit/components/productdb-recording-toggle.mdx
+++ b/docs/react-ui-kit/components/productdb-recording-toggle.mdx
@@ -17,9 +17,9 @@ necessary permission.
 
 ```jsx live
 <Center>
-  <ProductDBRecordingToggle size="sm" meeting={meeting} />
-  <ProductDBRecordingToggle size="lg" meeting={meeting} />
-  <ProductDBRecordingToggle variant="horizontal" size="sm" meeting={meeting} />
+  <DyteRecordingToggle size="sm" meeting={meeting} />
+  <DyteRecordingToggle size="lg" meeting={meeting} />
+  <DyteRecordingToggle variant="horizontal" size="sm" meeting={meeting} />
 </Center>
 ```
 
