--- a/docs/react-ui-kit/components/productdb-settings-audio.mdx
+++ b/docs/react-ui-kit/components/productdb-settings-audio.mdx
@@ -19,7 +19,7 @@ Emits `dyteStateUpdate` event with data for muting notification sounds:
 ```
 
 ```jsx live
-<ProductDBSettingsAudio meeting={meeting} />
+<DyteSettingsAudio meeting={meeting} />
 ```
 
 ## Props
