--- a/docs/react-ui-kit/components/productdb-settings-toggle.mdx
+++ b/docs/react-ui-kit/components/productdb-settings-toggle.mdx
@@ -18,9 +18,9 @@ When clicked it emits a `dyteStateUpdate` event with the data:
 
 ```jsx live
 <Center>
-  <ProductDBSettingsToggle size="sm" />
-  <ProductDBSettingsToggle size="lg" />
-  <ProductDBSettingsToggle variant="horizontal" size="sm" />
+  <DyteSettingsToggle size="sm" />
+  <DyteSettingsToggle size="lg" />
+  <DyteSettingsToggle variant="horizontal" size="sm" />
 </Center>
 ```
 
