--- a/docs/react-ui-kit/components/productdb-settings-video.mdx
+++ b/docs/react-ui-kit/components/productdb-settings-video.mdx
@@ -19,7 +19,7 @@ Emits `dyteStateUpdate` event with data for toggling mirroring of self video:
 ```
 
 ```jsx live
-<ProductDBSettingsVideo meeting={meeting} />
+<DyteSettingsVideo meeting={meeting} />
 ```
 
 ## Props
