--- a/docs/react-ui-kit/components/productdb-sidebar.mdx
+++ b/docs/react-ui-kit/components/productdb-sidebar.mdx
@@ -12,7 +12,7 @@ you can customize which sections you want, and which section you want as the def
 
 ```jsx live
 <Center>
-  <ProductDBSidebar
+  <DyteSidebar
     defaultSection="participants"
     meeting={meeting}
     style={{ height: '480px' }}
@@ -24,7 +24,7 @@ To see a mobile sidebar:
 
 ```jsx live
 <div style={{ position: 'relative', height: '600px' }}>
-  <ProductDBSidebar
+  <DyteSidebar
     view="full-screen"
     defaultSection="participants"
     meeting={meeting}
