--- a/docs/react-ui-kit/components/productdb-spinner.mdx
+++ b/docs/react-ui-kit/components/productdb-spinner.mdx
@@ -11,9 +11,9 @@ A component which shows an animating spinner.
 
 ```jsx live
 <Row>
-  <ProductDBSpinner />
-  <ProductDBSpinner style={{ color: '#ed7800' }} />
-  <ProductDBSpinner style={{ color: '#ffac00' }} />
+  <DyteSpinner />
+  <DyteSpinner style={{ color: '#ed7800' }} />
+  <DyteSpinner style={{ color: '#ffac00' }} />
 </Row>
 ```
 
