--- a/docs/react-ui-kit/components/productdb-spotlight-grid.mdx
+++ b/docs/react-ui-kit/components/productdb-spotlight-grid.mdx
@@ -15,7 +15,7 @@ You can customize the layout to a `column` view, by default is is `row`.
 - Participants from `participants[]` array are rendered in a smaller grid.
 
 ```jsx live
-<ProductDBSpotlightGrid
+<DyteSpotlightGrid
   layout="row"
   participants={meeting.participants.active.toArray()}
   pinnedParticipants={[meeting.self]}
