--- a/docs/react-ui-kit/components/productdb-switch.mdx
+++ b/docs/react-ui-kit/components/productdb-switch.mdx
@@ -10,7 +10,7 @@ description: >-
 A switch component which follows ProductDB's Design System.
 
 ```jsx live
-<ProductDBSwitch onProductDBChange={(e) => alert('New switch value:', e.detail)} />
+<DyteSwitch onDyteChange={(e) => alert('New switch value:', e.detail)} />
 ```
 
 ## Props
