--- a/docs/react-ui-kit/components/productdb-tooltip.mdx
+++ b/docs/react-ui-kit/components/productdb-tooltip.mdx
@@ -11,12 +11,12 @@ Tooltip component which follows ProductDB's Design System.
 
 ```jsx live
 <Center>
-  <ProductDBTooltip label="Primary tooltip variant" variant="primary">
+  <DyteTooltip label="Primary tooltip variant" variant="primary">
     <div>Hover over me</div>
-  </ProductDBTooltip>
-  <ProductDBTooltip variant="secondary" label="Secondary tooltip variant">
+  </DyteTooltip>
+  <DyteTooltip variant="secondary" label="Secondary tooltip variant">
     <div>Hover over me</div>
-  </ProductDBTooltip>
+  </DyteTooltip>
 </Center>
 ```
 
