--- a/docs/react-ui-kit/components/productdb-viewer-count.mdx
+++ b/docs/react-ui-kit/components/productdb-viewer-count.mdx
@@ -9,7 +9,7 @@ description: >-
 A component which shows count of total joined participants in a meeting.
 
 ```jsx live
-<ProductDBViewerCount meeting={meeting} />
+<DyteViewerCount meeting={meeting} />
 ```
 
 ## Props
