--- a/docs/android/components/productdb-audio-visualizer.mdx
+++ b/docs/android/components/productdb-audio-visualizer.mdx
@@ -12,7 +12,7 @@ An audio visualizer component which visualizes a participants audio.
 To use this component inside an xml use following syntax
 
 ```xml
-<productdb.io.uikit.atoms.ProductDBParticipantAudioIndicator
+<dyte.io.uikit.atoms.ProductDBParticipantAudioIndicator
       android:id="@+id/audio_indicator"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
