--- a/docs/android/components/productdb-avatar.mdx
+++ b/docs/android/components/productdb-avatar.mdx
@@ -9,7 +9,7 @@ description: >-
 Avatar component which renders a participant's image or their initials.
 
 ```xml
-<productdb.io.uikit.view.avatarview.ProductDBAvatarView
+<dyte.io.uikit.view.avatarview.ProductDBAvatarView
       android:id="@+id/dyteavatarview_dyte_participant_tile"
       android:layout_width="100dp"
       android:layout_height="100dp"
