--- a/docs/android/components/productdb-clock.mdx
+++ b/docs/android/components/productdb-clock.mdx
@@ -8,7 +8,7 @@ description: >-
 # ProductDBClockView
 
 ```xml
-<productdb.io.uikit.view.ProductDBClockView
+<dyte.io.uikit.view.ProductDBClockView
       android:id="@+id/dyte_clock_view"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
