--- a/docs/react-ui-kit/components/productdb-avatar.mdx
+++ b/docs/react-ui-kit/components/productdb-avatar.mdx
@@ -11,9 +11,9 @@ Avatar component which renders a participant's image or their initials.
 
 ```jsx live
 <Row>
-  <ProductDBAvatar size="sm" />
-  <ProductDBAvatar size="md" participant={meeting.self} />
-  <ProductDBAvatar size="lg" />
+  <DyteAvatar size="sm" />
+  <DyteAvatar size="md" participant={meeting.self} />
+  <DyteAvatar size="lg" />
 </Row>
 ```
 
