--- a/docs/react-ui-kit/components/productdb-chat-toggle.mdx
+++ b/docs/react-ui-kit/components/productdb-chat-toggle.mdx
@@ -21,9 +21,9 @@ When clicked it emits a `dyteStateUpdate` event with the data:
 
 ```jsx live
 <Center>
-  <ProductDBChatToggle size="sm" meeting={meeting} />
-  <ProductDBChatToggle size="lg" meeting={meeting} />
-  <ProductDBChatToggle variant="horizontal" size="sm" meeting={meeting} />
+  <DyteChatToggle size="sm" meeting={meeting} />
+  <DyteChatToggle size="lg" meeting={meeting} />
+  <DyteChatToggle variant="horizontal" size="sm" meeting={meeting} />
 </Center>
 ```
 
