--- a/docs/react-ui-kit/components/productdb-controlbar-button.mdx
+++ b/docs/react-ui-kit/components/productdb-controlbar-button.mdx
@@ -1,29 +1,29 @@
 ---
 image: /static/ui-kit/1.x.x/components/productdb-controlbar-button.svg
 description: >-
-  Learn how to use and customize the ProductDBControlbarButton component in ProductDB's
+  Learn how to use and customize the DyteControlbarButton component in Dyte's
   React UI Kit with our detailed documentation.
 ---
 
-# ProductDBControlbarButton
+# DyteControlbarButton
 
 A skeleton component used for composing buttons.
 
 ```jsx live
 <Center>
-  <ProductDBControlbarButton
+  <DyteControlbarButton
     label="Flight Mode"
     icon={airplaneSVG}
     onClick={() => alert('Flight mode toggled')}
     size="sm"
   />
-  <ProductDBControlbarButton
+  <DyteControlbarButton
     label="Flight Mode"
     icon={airplaneSVG}
     onClick={() => alert('Flight mode toggled')}
     size="lg"
   />
-  <ProductDBControlbarButton
+  <DyteControlbarButton
     label="Flight Mode"
     icon={airplaneSVG}
     onClick={() => alert('Flight mode toggled')}
@@ -38,5 +38,5 @@ A skeleton component used for composing buttons.
 <PropsTable of="productdb-controlbar-button" />
 
 <head>
-  <title>React UI Kit ProductDBControlbarButton</title>
+  <title>React UI Kit DyteControlbarButton</title>
 </head>
