--- a/docs/react-ui-kit/components/productdb-fullscreen-toggle.mdx
+++ b/docs/react-ui-kit/components/productdb-fullscreen-toggle.mdx
@@ -11,8 +11,8 @@ existing `productdb-meeting` component in the DOM.
 
 ```jsx live
 <Center>
-  <ProductDBFullscreenToggle />
-  <ProductDBFullscreenToggle variant="horizontal" />
+  <DyteFullscreenToggle />
+  <DyteFullscreenToggle variant="horizontal" />
 </Center>
 ```
 
