--- a/docs/react-ui-kit/components/productdb-logo.mdx
+++ b/docs/react-ui-kit/components/productdb-logo.mdx
@@ -10,7 +10,7 @@ description: >-
 A component which loads the logo from your config, or via the `logo-url` attribute.
 
 ```jsx live
-<ProductDBLogo logoUrl="/logo/dark.svg" style={{ height: '36px' }} />
+<DyteLogo logoUrl="/logo/dark.svg" style={{ height: '36px' }} />
 ```
 
 ## Props
