--- a/docs/react-ui-kit/components/productdb-participants-toggle.mdx
+++ b/docs/react-ui-kit/components/productdb-participants-toggle.mdx
@@ -19,9 +19,9 @@ When clicked it emits a `dyteStateUpdate` event with the data:
 
 ```jsx live
 <Center>
-  <ProductDBParticipantsToggle size="sm" />
-  <ProductDBParticipantsToggle size="lg" />
-  <ProductDBParticipantsToggle variant="horizontal" size="sm" />
+  <DyteParticipantsToggle size="sm" />
+  <DyteParticipantsToggle size="lg" />
+  <DyteParticipantsToggle variant="horizontal" size="sm" />
 </Center>
 ```
 
