--- a/docs/react-ui-kit/components/productdb-permissions-message.mdx
+++ b/docs/react-ui-kit/components/productdb-permissions-message.mdx
@@ -10,7 +10,7 @@ A component which shows permission related troubleshooting
 information.
 
 ```jsx live
-<ProductDBPermissionsMessage meeting={meeting} />
+<DytePermissionsMessage meeting={meeting} />
 ```
 
 ## Props
