--- a/docs/react-ui-kit/components/productdb-recording-indicator.mdx
+++ b/docs/react-ui-kit/components/productdb-recording-indicator.mdx
@@ -12,7 +12,7 @@ A component which indicates the recording status of a meeting.
 It will not render anything if no recording is taking place.
 
 ```jsx live
-<ProductDBRecordingIndicator meeting={meeting} />
+<DyteRecordingIndicator meeting={meeting} />
 ```
 
 ## Props
