--- a/docs/react-ui-kit/components/productdb-remote-access-manager.mdx
+++ b/docs/react-ui-kit/components/productdb-remote-access-manager.mdx
@@ -10,7 +10,7 @@ description: >-
 A component which lets a user manage remote access requests for their screen.
 
 ```jsx live
-<ProductDBRemoteAccessManager meeting={meeting} />
+<DyteRemoteAccessManager meeting={meeting} />
 ```
 
 ## Props
