--- a/docs/react-ui-kit/components/productdb-screen-share-toggle.mdx
+++ b/docs/react-ui-kit/components/productdb-screen-share-toggle.mdx
@@ -10,9 +10,9 @@ A button which toggles your screenshare.
 
 ```jsx live
 <Center>
-  <ProductDBScreenShareToggle size="sm" meeting={meeting} />
-  <ProductDBScreenShareToggle size="lg" meeting={meeting} />
-  <ProductDBScreenShareToggle variant="horizontal" size="sm" meeting={meeting} />
+  <DyteScreenShareToggle size="sm" meeting={meeting} />
+  <DyteScreenShareToggle size="lg" meeting={meeting} />
+  <DyteScreenShareToggle variant="horizontal" size="sm" meeting={meeting} />
 </Center>
 ```
 
