--- a/docs/react-ui-kit/components/productdb-screenshare-view.mdx
+++ b/docs/react-ui-kit/components/productdb-screenshare-view.mdx
@@ -14,11 +14,11 @@ It also allows for placement of other components similar to `productdb-participa
 This component will not render anything if the participant hasn't start screensharing.
 
 ```jsx live
-<ProductDBScreenshareView participant={meeting.self} style={{ height: '480px' }}>
-  <ProductDBNameTag participant={meeting.self}>
-    <ProductDBAudioVisualizer slot="start" participant={meeting.self} />
-  </ProductDBNameTag>
-</ProductDBScreenshareView>
+<DyteScreenshareView participant={meeting.self} style={{ height: '480px' }}>
+  <DyteNameTag participant={meeting.self}>
+    <DyteAudioVisualizer slot="start" participant={meeting.self} />
+  </DyteNameTag>
+</DyteScreenshareView>
 ```
 
 ## Props
