--- a/docs/react-ui-kit/components/productdb-settings.mdx
+++ b/docs/react-ui-kit/components/productdb-settings.mdx
@@ -14,14 +14,14 @@ as well as see your connection quality.
 <Center>
   <h2>Desktop</h2>
 
-  <ProductDBSettings
+  <DyteSettings
     meeting={meeting}
     style={{ height: '480px', width: '100%', maxWidth: '720px' }}
   />
 
   <h2>Mobile</h2>
 
-  <ProductDBSettings
+  <DyteSettings
     meeting={meeting}
     size="sm"
     style={{ height: '480px', width: '100%', maxWidth: '360px' }}
