--- a/docs/react-ui-kit/components/productdb-setup-screen.mdx
+++ b/docs/react-ui-kit/components/productdb-setup-screen.mdx
@@ -1,17 +1,17 @@
 ---
 image: /static/ui-kit/1.x.x/components/productdb-setup-screen.svg
 description: >-
-  Learn how to use and customize the ProductDBSetupScreen component in ProductDB's React
+  Learn how to use and customize the SetupScreen component in ProductDB's React
   UI Kit with our detailed documentation.
 ---
 
-# ProductDBSetupScreen
+# DyteSetupScreen
 
 A screen shown before joining the meeting, where you can edit your display name,
 and media settings.
 
 ```jsx live
-<ProductDBSetupScreen meeting={meeting} style={{ height: '360px' }} />
+<DyteSetupScreen meeting={meeting} style={{ height: '360px' }} />
 ```
 
 ## Props
@@ -19,5 +19,5 @@ and media settings.
 <PropsTable of="productdb-setup-screen" />
 
 <head>
-  <title>React UI Kit ProductDBSetupScreen</title>
+  <title>React UI Kit DyteSetupScreen</title>
 </head>
