--- a/docs/react-ui-kit/components/productdb-simple-grid.mdx
+++ b/docs/react-ui-kit/components/productdb-simple-grid.mdx
@@ -10,7 +10,7 @@ description: >-
 A grid component which renders only the participants in a simple grid.
 
 ```jsx live
-<ProductDBSimpleGrid
+<DyteSimpleGrid
   participants={[meeting.self]}
   style={{ height: '360px', width: '100%' }}
 />
